# vscode-test-debug-bug

./: README.md  pyproject.toml
sample_app/: __init__.py
tests/: test_sample_app.py
